test/good/functions/var05.px

func f(g: Int->Bool, x: Int): Bool def
    return g(x)

func h(x: Int = 42): Bool def
    return x > 0

print h()
print f(h, -5)
