test/bad/lambdas/lambda09.px

func f(g: Bool->Void): Void def
    return

f(_)
